Examples/Semantics/success/letnoinit.cl
class Test {
  foo:Test;
  baz():Object { let x:Int in x};
};
