Examples/Semantics/fail/lteassociativity.cl
class Test {
  foo:Test;
  bar(x:Int, y:Int, z:Int):Int {x<=y<=z};
};
